--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,13 @@ title: "نینی‌نیت - لباس‌های بافتنی نوزاد"
 author: "نینی‌نیت"
 description: "فروشگاه آنلاین لباس‌های بافتنی دست‌ساز برای نوزادان و کودکان - طراحی‌های منحصر به فرد و با کیفیت" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
+# SEO / Site metadata
+url: "https://niniknit.github.io"
+baseurl: ""
+logo: "/logo.png"
+lang: "fa"
+timezone: "Asia/Tehran"
+
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
 email: "info@niniknit.ir"
